setting color,size

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
     
 </head>
 <body>
-    <h1>hello world</h1>
-    <i class="fa-brands fa-instagram"></i>
-<p>hi there</p>
+    <div class="hero">
+        <p>Hi I'am</p> 
+        <h1>Anastasiia Kosinova</h1>
+        <h2>Front-end developer, based in United Kingdom</h2>
+        <a href="#" class="btn btn-branding">Contact me</a>
+    </div>
 </body>
 </html>
