--- a/contact.html
+++ b/contact.html
@@ -30,30 +30,19 @@
 <body>
     <div class="content-container container">
         <div class="content">
-            <h1 class="mb-4">Take a look at what I've been working on!</h1> 
-
-            <div class="row">
-                <div class="col-6">
-                    <img src="images/yogurt.png" alt="" class="img-fluid mb-3 rounded">
-                    <h3 class="text-center m-0">Yogirt Project</h3>
-                    <p class="text-center text-muted">Build with HTML and CSS</p>
-                </div>
-                <div class="col-6">
-                    <img src="images/weather.png" alt="" class="img-fluid mb-3 rounded">
-                    <h3 class="text-center m-0">Weather Project</h3>
-                    <p class="text-center text-muted">Build with HTML, CSS and JavaScript</p>
-                </div>
-                <div class="col-6">
-                    <img src="images/dictionary.png" alt="" class="img-fluid mb-3 rounded">
-                    <h3 class="text-center m-0">Dictionary App</h3>
-                    <p class="text-center text-muted">Build with HTML, CSS and React</p>
-                </div>
-                <div class="col-6">
-                    <img src="images/translation.png" alt="" class="img-fluid mb-3 rounded">
-                    <h3 class="text-center m-0">Translation App</h3>
-                    <p class="text-center text-muted">Build with HTML, CSS and React</p>
-                </div>
-            </div>
+            <h1 class="mb-4">Let's get in touch!</h1> 
+            <h3>Email</h3>
+            <p>
+                <a href="mailto:kosinova.an@gmail.com">kosinova.an@gmail.com</a>
+                </p>
+            <h3>LinkedIn</h3>
+            <p>
+                <a href="https:/www.linkedin.com/kosinova" target="_blank">@kosinova</a>
+            </p>
+            <h3>Instagram</h3>
+            <p>
+                <a href="https:/www.instagram.com/a_kosinova" target="_blank">@a_kosinova</a>
+            </p>
         </div>
     </div>
 </body>
