--- a/index.html
+++ b/index.html
@@ -89,6 +89,27 @@
                 </div> 
             </div>
         </div>
+        <footer>
+            <div class="contact-box d-flex justify-content-between nb-5 d-none d-md-flex">
+                <div>
+                   <h4>
+                    Work Inquiry
+                    </h4>
+                    <p class="text-muted">Let`s work together</p>
+                </div>
+                <div><a href="" class="btn btn-branding">Contact me</a> </div>
+                  
+            </div>
+            <div class="text-center m-5">
+               <a href="mailto:kosinova.an@gmail.com" class="email-link">kosinova.an@gmail.com</a> 
+            </div>
+            <div class="social-links d-flex justify-content-center">
+                <a href="https://www.github.com/Kosinova" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/Kosinova" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/Kosinova" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            </div>
+ 
+        </footer>
     </div>
     
 
