--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,21 @@
     
 </head>
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+            <img src="" class="logo" alt="Anastasiia logo">
+            <ul>
+                <li> <a href="/index.html" title="Homepage">Home</a>
+                    </li>
+                <li><a href="/about.html" title="About Anastasiia">About</a>
+                    </li>
+                <li><a href="/work.html" title="Anastasiia`s work">Work</a>
+                    </li>
+                <li class="active"><a href="/contact.html" title="Contact Anastasiia">Contact</a>
+                    </li>
+            </ul>
+        </nav>
+    </div>
     <div class="content-container container">
         <div class="content">
             <h1 class="mb-4">Let's get in touch!</h1> 
@@ -45,5 +60,29 @@
             </p>
         </div>
     </div>
+        <footer>
+            <div class="contact-box d-flex justify-content-between nb-5 d-none d-md-flex">
+                <div>
+                   <h3>
+                    Work Inquiry
+                    </h3>
+                    <p class="text-muted">Let`s work together</p>
+                </div>
+                <div><a href="/contact.html" class="btn btn-branding" title="Contact Anastasiia">Contact me</a> </div>
+                  
+            </div>
+            <div class="text-center m-5">
+               <a href="mailto:kosinova.an@gmail.com" class="email-link" title="Email Anastasiia">kosinova.an@gmail.com</a> 
+            </div>
+            <div class="social-links d-flex justify-content-center">
+                <a href="https://www.github.com/Kosinova" target="_blank" title="GitHub Profile"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/Kosinova" target="_blank" title="Instagram Profile"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/Kosinova" target="_blank" title="Facebook profile"><i class="fa-brands fa-facebook"></i></a>
+            </div>
+            <p class="text-center m-5 text-muted">
+                This project was coded SheCodes, and it is
+            <a href="https://github.com/AnastasiiaKo/portfolio-project"  target="_blank">open-sourced</a>
+            </p>
+        </footer>
 </body>
 </html>
