--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Anastasiia is a front-end enjineer based in United Kingdom">
+    <title>Front-end developer - Anastasiia Kosinova</title>
 
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
@@ -30,15 +31,15 @@
 <body>
     <div class="container">
         <nav class="d-flex justify-content-between">
-            <img src="" class="logo" alt="">
+            <img src="" class="logo" alt="Anastasiia logo">
             <ul>
-                <li class="active"> <a href="/">Home</a>
+                <li class="active"> <a href="/" title="Homepage">Home</a>
                     </li>
-                <li><a href="/about.html">About</a>
+                <li><a href="/about.html" title="About Anastasiia">About</a>
                     </li>
-                <li><a href="/work.html">Work</a>
+                <li><a href="/work.html" title="Anastasiia`s work">Work</a>
                     </li>
-                <li><a href="/contact.html">Contact</a>
+                <li><a href="/contact.html" title="Contact Anastasiia">Contact </a>
                     </li>
             </ul>
         </nav>
@@ -55,13 +56,13 @@
     <div class="container">
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="images/yogurt.png" class="img-fluid" alt="">
+                <img src="images/yogurt.png" class="img-fluid" alt="Yogurt project">
             </div>
             <div class="col">
                 <div class="project-description">
                     <h2 class="mb-5">Yogurt Project</h2>
                     <p class="md-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-                    <a href="" class="btn btn-branding-outline">View detail project</a> 
+                    <a href="/work.html" class="btn btn-branding-outline">View detail project</a> 
                 </div> 
             </div>
         </div>
@@ -70,45 +71,48 @@
                 <div class="project-description">
                     <h2 class="mb-5">Weather Project</h2>
                     <p class="md-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-                    <a href="" class="btn btn-branding-outline">View detail project</a> 
+                    <a href="/work.html" class="btn btn-branding-outline">View detail project</a> 
                 </div> 
             </div>
             <div class="col d-none d-lg-block">
-                <img src="images/weather.png" class="img-fluid" alt="">
+                <img src="images/weather.png" class="img-fluid" alt="Weather app">
             </div>
         </div>
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-            <img src="images/dictionary.png" class="img-fluid" alt="">
+            <img src="images/dictionary.png" class="img-fluid" alt="Dictionary Project">
             </div>
             <div class="col">
                 <div class="project-description">
                     <h2 class="mb-5">Dictionary Project</h2>
                     <p class="md-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-                    <a href="" class="btn btn-branding-outline">View detail project</a> 
+                    <a href="/work.html" class="btn btn-branding-outline">View detail project</a> 
                 </div> 
             </div>
         </div>
         <footer>
             <div class="contact-box d-flex justify-content-between nb-5 d-none d-md-flex">
                 <div>
-                   <h4>
+                   <h3>
                     Work Inquiry
-                    </h4>
+                    </h3>
                     <p class="text-muted">Let`s work together</p>
                 </div>
-                <div><a href="" class="btn btn-branding">Contact me</a> </div>
+                <div><a href="/contact.html" class="btn btn-branding" title="Contact Anastasiia">Contact me</a> </div>
                   
             </div>
             <div class="text-center m-5">
-               <a href="mailto:kosinova.an@gmail.com" class="email-link">kosinova.an@gmail.com</a> 
+               <a href="mailto:kosinova.an@gmail.com" class="email-link" title="Email Anastasiia">kosinova.an@gmail.com</a> 
             </div>
             <div class="social-links d-flex justify-content-center">
-                <a href="https://www.github.com/Kosinova" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.instagram.com/Kosinova" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.facebook.com/Kosinova" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.github.com/Kosinova" target="_blank" title="GitHub Profile"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/Kosinova" target="_blank" title="Instagram Profile"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/Kosinova" target="_blank" title="Facebook profile"><i class="fa-brands fa-facebook"></i></a>
             </div>
- 
+            <p class="text-center m-5 text-muted">
+                This project was coded SheCodes, and it is
+            <a href="https://github.com/AnastasiiaKo/portfolio-project"  target="_blank">open-sourced</a>
+            </p>
         </footer>
     </div>
     
