--- a/work.html
+++ b/work.html
@@ -28,33 +28,72 @@
     
 </head>
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+            <img src="" class="logo" alt="Anastasiia logo">
+            <ul>
+                <li> <a href="/index.html" title="Homepage">Home</a>
+                    </li>
+                <li><a href="/about.html" title="About Anastasiia">About</a>
+                    </li>
+                <li class="active"><a href="/work.html" title="Anastasiia`s work">Work</a>
+                    </li>
+                <li><a href="/contact.html" title="Contact Anastasiia">Contact</a>
+                    </li>
+            </ul>
+        </nav>
+    </div>
     <div class="content-container container">
         <div class="content">
             <h1 class="mb-4">Take a look at what I've been working on!</h1> 
 
             <div class="row">
                 <div class="col-6">
-                    <img src="images/yogurt.png" alt="" class="img-fluid mb-3 rounded">
-                    <h3 class="text-center m-0">Yogirt Project</h3>
+                    <img src="images/yogurt.png" alt="Yogurt Project" class="img-fluid mb-3 rounded">
+                    <h3 class="text-center m-0">Yogurt Project</h3>
                     <p class="text-center text-muted">Build with HTML and CSS</p>
                 </div>
                 <div class="col-6">
-                    <img src="images/weather.png" alt="" class="img-fluid mb-3 rounded">
+                    <img src="images/weather.png" alt="Weather Project" class="img-fluid mb-3 rounded">
                     <h3 class="text-center m-0">Weather Project</h3>
                     <p class="text-center text-muted">Build with HTML, CSS and JavaScript</p>
                 </div>
                 <div class="col-6">
-                    <img src="images/dictionary.png" alt="" class="img-fluid mb-3 rounded">
+                    <img src="images/dictionary.png" alt="Dictionary App" class="img-fluid mb-3 rounded">
                     <h3 class="text-center m-0">Dictionary App</h3>
                     <p class="text-center text-muted">Build with HTML, CSS and React</p>
                 </div>
                 <div class="col-6">
-                    <img src="images/translation.png" alt="" class="img-fluid mb-3 rounded">
+                    <img src="images/translation.png" alt="Weather Project" class="img-fluid mb-3 rounded">
                     <h3 class="text-center m-0">Translation App</h3>
                     <p class="text-center text-muted">Build with HTML, CSS and React</p>
                 </div>
             </div>
         </div>
     </div>
+        <footer>
+            <div class="contact-box d-flex justify-content-between nb-5 d-none d-md-flex">
+                <div>
+                   <h3>
+                    Work Inquiry
+                    </h3>
+                    <p class="text-muted">Let`s work together</p>
+                </div>
+                <div><a href="/contact.html" class="btn btn-branding" title="Contact Anastasiia">Contact me</a> </div>
+                  
+            </div>
+            <div class="text-center m-5">
+               <a href="mailto:kosinova.an@gmail.com" class="email-link" title="Email Anastasiia">kosinova.an@gmail.com</a> 
+            </div>
+            <div class="social-links d-flex justify-content-center">
+                <a href="https://www.github.com/Kosinova" target="_blank" title="GitHub Profile"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/Kosinova" target="_blank" title="Instagram Profile"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/Kosinova" target="_blank" title="Facebook profile"><i class="fa-brands fa-facebook"></i></a>
+            </div>
+            <p class="text-center m-5 text-muted">
+                This project was coded SheCodes, and it is
+            <a href="https://github.com/AnastasiiaKo/portfolio-project"  target="_blank">open-sourced</a>
+            </p>
+        </footer>
 </body>
 </html>
